CREATE TABLE "Measurements" (
  "pkMeasurement" int PRIMARY KEY,
  "id" varchar,
  "timestamp" timestamp
);

CREATE TABLE "VDRs" (
  "vdr_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "source" varchar,
  "measurement_id" int,
  "MetrologicalID" varchar,
  "LaneNo" int,
  "ErrorFlag" int,
  "WarningFlag" int,
  "Direction" int,
  "MoveStatus" int,
  "FrontToFront" float,
  "BackToFront" float,
  "FrontOverhang" float,
  "Duration" float,
  "VehicleLength" float,
  "GrossWeight" int,
  "LeftWeight" int,
  "RightWeight" int,
  "Velocity" float,
  "WheelBase" float,
  "AxlesCount" int,
  "MassUnit" varchar,
  "VelocityUnit" varchar,
  "DistanceUnit" varchar,
  "Marked" boolean,
  "MarkedViolations" boolean,
  "VehicleID" varchar,
  "StartTime" bigint,
  "StartTimeStr" varchar
);

CREATE TABLE "Axles" (
  "axle_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "vdr_id" int,
  "ID" int,
  "GroupID" int,
  "Velocity" float,
  "Weight" int,
  "LeftWheelWeight" int,
  "RightWheelWeight" int,
  "LeftRightImbalance" float,
  "Distance" float,
  "Track" int,
  "PatchLengthRight" float,
  "PatchLengthLeft" float,
  "PatchWidthRight" float,
  "PatchWidthLeft" float,
  "PositionRight" float,
  "PositionLeft" float,
  "SDTireRight" char,
  "SDTireLeft" char,
  "TireStatusRight" varchar,
  "TireStatusLeft" varchar
);

ALTER TABLE "VDRs" ADD FOREIGN KEY ("measurement_id") REFERENCES "Measurements" ("pkMeasurement");

ALTER TABLE "Axles" ADD FOREIGN KEY ("vdr_id") REFERENCES "VDRs" ("vdr_id");

